--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -1391,6 +1391,15 @@
                               font-size: 10px;
                             "
                           >
+                            Email
+                          </th>
+                          <th
+                            style="
+                              background-color: #201e43;
+                              color: white;
+                              font-size: 10px;
+                            "
+                          >
                             Birth&nbsp;place
                           </th>
                           <th
