change button name

--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -970,7 +970,7 @@
                     </div>
                     <div class="card-footer text-end pe-0">
                       <button type="submit" class="btn btn-primary">
-                        EDIT CANDIDATE
+                        Update Candidate
                       </button>
                     </div>
                   </div>
