--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -900,7 +900,7 @@
                                 class="btn btn-danger float-end mt-3"
                                 type="submit"
                               >
-                                Edit Candidate
+                                Update Candidate
                               </button>
                             </div>
                           </div>
