--- a/views/public/html/Evaluation-EngineOfficer.html
+++ b/views/public/html/Evaluation-EngineOfficer.html
@@ -1043,7 +1043,7 @@ let userData=[];
         document.getElementById('rankApplied').value = appliedRank || '';
         document.getElementById('dateNow').value = appliedDate || '';
         document.getElementById('intName').value = getUserName(interviewerName )|| '';
-
+      console.log(candidateId, 'candidateIdcandidateIdcandidateIdcandidateId')
         // Fetch candidate details
         getCandidate(candidateId);
         
