--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -226,7 +226,7 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    ≡ EDIT CANDIDATE
+                    ≡ Update Candidate
                   </button>
                   <ul class="dropdown-menu dropdown-menu-start">
                     <li>
