--- a/views/public/html/Evaluation-OfficersEngine.html
+++ b/views/public/html/Evaluation-OfficersEngine.html
@@ -1092,6 +1092,62 @@
           if (token) {
             const decodedToken = decodeToken(token);
             const { candidateId, appliedDate, appliedRank, interviewerName, time } = getURLParams();
+            getCandidate(candidateId);
+            updateCandidatePhoto(candidateId)
+
+
+            async function getCandidate(id) {
+                try {
+                    const response = await axios.get(`${config.APIURL}candidate/get-candidate/${id}`, {
+                        headers: { "Authorization": token }
+                    });
+                    
+                    const candidate = response.data.candidate;
+                    const fullName = document.getElementById('fullName')
+                    const nationality = document.getElementById('newNationality')
+                    const mobile = document.getElementById('mobile')
+                    const lastContract=document.getElementById('lastContract')
+                    const qualification = document.getElementById('qualification');
+                    fullName.value=response.data.candidate.fname
+                    nationality.value=getNationalityName(response.data.candidate.nationality)
+                    mobile.value=response.data.candidate.c_mobi1
+                    lastContract.value=response.data.candidate.c_rank
+                    qualification.value=response.data.candidate?.qualifications||''
+
+
+
+                    
+                    
+                    console.log(candidate)
+                } catch (error) {
+                    console.error('Error fetching candidate:', error);
+                }
+            }
+            async function updateCandidatePhoto(id) {             
+              const response = await axios.get(`${config.APIURL}candidate/get-candidate/${id}`,{headers:{"Authorization":token}});
+              console.log(response)
+              const fetchedPhotoValue = response.data.candidate.photos
+              console.log(fetchedPhotoValue)
+              // Fetch the photo value from the form
+              const photoValue = fetchedPhotoValue
+
+              // Extract the photo name from the photo value
+              const photoName = photoValue.substring(photoValue.lastIndexOf('/') + 1);
+              console.log(photoName, 'photoNamephotoName')
+              // Update the src attribute of the img tag
+              if(photoName!=="") {
+                const imageContainer = document.getElementById('imageContainer');
+                const image = imageContainer.querySelector('img');
+                image.src = "/photos/" + photoName;
+                image.alt = "Description of the image"; // Add alt attribute if needed
+                console.log(image.src); // Check the src attribute in the console
+              }
+            }
+
+            function getNationalityName(code) {
+                const nationality = nationalityData.find(nationality => nationality.code == code);
+                return nationality ? nationality.country : code;
+            }
 
             // Store the values in sessionStorage
             sessionStorage.setItem('candidateId', candidateId);
