--- a/views/public/html/Evaluation-EngineRatings.html
+++ b/views/public/html/Evaluation-EngineRatings.html
@@ -119,6 +119,7 @@
             <div class="col-md-2 border d-flex justify-content-center align-items-center pt-3">
                 <p style="font-size: 10px;">
                     FORM NO: OFF 47D<br>
+                    RPSL Number	:	RPSL-CHN-012<br/>
                     REVISION NO: 00<br>
                     DATE: <span id="application_date"></span>
                 </p>
