--- a/views/public/html/Evaluation-GalleyOfficer.html
+++ b/views/public/html/Evaluation-GalleyOfficer.html
@@ -121,6 +121,7 @@
         <div class="col-md-2 border d-flex justify-content-center align-items-center pt-3">
           <p style="font-size: 10px;">
             FORM NO: OFF 47E<br />
+            RPSL Number	:	RPSL-CHN-012<br/>
             REVISION NO: 00<br />
             DATE: <span id="application_date"></span>
           </p>
