--- a/views/public/html/Evaluation-OfficersDeck.html
+++ b/views/public/html/Evaluation-OfficersDeck.html
@@ -7,6 +7,7 @@
     <title>Pre-Employment Evaluation Sheet</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../assets/sweetalert/sweetalert2.min.css" />
     <style>
         /* Ensure the container has a fixed width */
         .container {
@@ -1054,6 +1055,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="../assets/sweetalert/sweetalert2.min.js"></script>
     <script>
         const month = [
             "Jan",
@@ -1424,6 +1426,11 @@
                                 }
                             )
                             .then((response) => {
+                                Swal.fire({
+                                    icon: "success",
+                                    title: "Success",
+                                    text:"Evaluation Form Submited Successfully!",
+                                });
                                 console.log(response.data.message);
                             })
                             .catch((error) => {
