--- a/views/public/html/Evaluation-EngineOfficersForm.html
+++ b/views/public/html/Evaluation-EngineOfficersForm.html
@@ -936,6 +936,7 @@ SIRE/CID experience
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script>
+    const token = sessionStorage.getItem("token");
     function addFrontZero(value) {
               if(value!=="") {
                 if(parseInt(value)<10) {
@@ -1046,7 +1047,7 @@ SIRE/CID experience
         const candidateId = params.get('candidateId');
         const evalId = params.get('id');
         const time = params.get('time');
-        updateCandidatePhoto(candidateId)
+        
         const timeElement = document.getElementById('timeNow');
         if (timeElement) {
             timeElement.value = time || ''; // Default to an empty string if time is null
@@ -1055,7 +1056,7 @@ SIRE/CID experience
         }
     
         if (candidateId && evalId) {
-
+            updateCandidatePhoto(candidateId)
           
             console.log("Candidate ID:", candidateId);
             console.log("Evaluation ID:", evalId);
