add alert message

--- a/views/public/html/Evaluation-EngineOfficer.html
+++ b/views/public/html/Evaluation-EngineOfficer.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/sweetalert/sweetalert2.min.css" />
     <style>
       body{
         font-size: 18px !important;
@@ -932,6 +933,7 @@ SIRE/CID experience
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="../assets/sweetalert/sweetalert2.min.js"></script>
   <script>
 
       const month = [
@@ -1107,6 +1109,11 @@ let userData=[];
                 time: time
             })
             .then(response => {
+              Swal.fire({
+                  icon: "success",
+                  title: "Success",
+                  text:"Evaluation Form Submited Successfully!",
+              });
                 console.log(response.data.message);
             })
             .catch(error => {
