--- a/views/public/html/Evaluation-EngineRatings.html
+++ b/views/public/html/Evaluation-EngineRatings.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pre-Employment Evaluation Sheet</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/sweetalert/sweetalert2.min.css" />
     <style>
         body{
           font-size: 18px !important;
@@ -976,6 +977,7 @@ SIRE/CDI experience Right ship
      <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="../assets/sweetalert/sweetalert2.min.js"></script>
     <script>
         const month = [
           "Jan",
@@ -1214,6 +1216,11 @@ SIRE/CDI experience Right ship
                         time: time // Use the 'time' parameter
                     })
                     .then(response => {
+                        Swal.fire({
+                            icon: "success",
+                            title: "Success",
+                            text:"Evaluation Form Submited Successfully!",
+                        });
                         console.log(response.data.message);
                     })
                     .catch(error => {
