--- a/views/public/html/Evaluation-GalleyOfficer.html
+++ b/views/public/html/Evaluation-GalleyOfficer.html
@@ -6,6 +6,7 @@
     <title>Pre-Employment Evaluation Sheet</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/sweetalert/sweetalert2.min.css" />
     <style>
       body{
         font-size: 18px !important;
@@ -816,7 +817,7 @@ SIRE/CDI experience Right ship
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-  
+    <script src="../assets/sweetalert/sweetalert2.min.js"></script>
   
   <script>
     const month = [
@@ -1062,6 +1063,11 @@ SIRE/CDI experience Right ship
                     time: time // Use the 'time' parameter
                 })
                 .then(response => {
+                  Swal.fire({
+                      icon: "success",
+                      title: "Success",
+                      text:"Evaluation Form Submited Successfully!",
+                  });
                     console.log(response.data.message);
                 })
                 .catch(error => {
