--- a/views/public/html/Evaluation-OfficersDeck.html
+++ b/views/public/html/Evaluation-OfficersDeck.html
@@ -1156,7 +1156,7 @@
                 };
             }
 
-            const token = sessionStorage.getItem("token");
+            const token = localStorage.getItem("token");
 
             if (token) {
                 const decodedToken = decodeToken(token);
