--- a/views/public/html/Evaluation-OfficersEngineForm.html
+++ b/views/public/html/Evaluation-OfficersEngineForm.html
@@ -990,10 +990,12 @@
               const response = await axios.get(`${config.APIURL}candidate/viewevaluation/${evalId}/${candidateId}`);
               const evaluationData = response.data.values;
               console.log("Fetched Evaluation Data:", evaluationData);
-              var evaluationalues =
-                    evaluationData !== "" && evaluationData !== null
-                        ? JSON.parse(evaluationData)
-                        : "";
+              var evaluationalues = '';
+              if (typeof evaluationData !== "string") { 
+                  evaluationalues =  evaluationData !== "" && evaluationData !== null? evaluationData: "";
+              }else {
+                  evaluationalues =  evaluationData !== "" && evaluationData !== null? JSON.parse(evaluationData): "";
+              }
              const applied_date = response?.data?.applied_date || '';
               applieddate = (applied_date!=="")?new Date(applied_date):new Date();
               const month = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
@@ -1076,10 +1078,29 @@
               console.log("Candidate ID:", candidateId);
               console.log("Evaluation ID:", evalId);
               fetchEvaluationData(candidateId, evalId);
+              updateCandidatePhoto(candidateId)
           } else {
               console.warn('Missing candidateId or id in URL');
           }
       }
+
+      async function updateCandidatePhoto(id) {
+        const token = localStorage.getItem("token");      
+        const response = await axios.get(`${config.APIURL}candidate/get-candidate/${id}`,{headers:{"Authorization":token}});
+        const fetchedPhotoValue = response.data.candidate.photos
+        // Fetch the photo value from the form
+        const photoValue = fetchedPhotoValue
+
+        // Extract the photo name from the photo value
+        const photoName = photoValue.substring(photoValue.lastIndexOf('/') + 1);
+        // Update the src attribute of the img tag
+        if(photoName!=="") {
+            const imageContainer = document.getElementById('imageContainer');
+            const image = imageContainer.querySelector('img');
+            image.src = "/photos/" + photoName;
+            image.alt = "Description of the image"; // Add alt attribute if needed
+        }
+    }
   
       // Call initialize function on page load
       window.onload = initialize;
