--- a/views/public/html/Evaluation-GalleyOfficersForm.html
+++ b/views/public/html/Evaluation-GalleyOfficersForm.html
@@ -114,8 +114,8 @@
         </div>  
 
         <form>
-          <div class="d-flex justify-content-center" id="imageContainer" >
-            <img id="img" style="height: 100px;width: 100px;border: solid 1px grey;"/>
+            <div class="d-flex" id="imageContainer" style="justify-content: end;">
+                <img id="img" style="height: 150px; width: 150px; border: solid 1px grey" />
                    
                    </div>
             <div class="mb-3">
